--- a/src/Games.css
+++ b/src/Games.css
@@ -72,26 +72,30 @@ h1 {
   align-items: center;
   justify-content: space-between;
   gap: 10px;
-  margin: 10px 0;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .team-info h2 {
   background: linear-gradient(90deg, #457b9d, #1d3557);
   color: #fff;
-  padding: 10px 15px;
+  padding: 10px;
   border-radius: 8px;
   margin: 0;
-  font-size: 1.1em;
+  font-size: 1rem;
   text-align: center;
-  flex: 1;
+  white-space: normal; /* Allow wrapping */
+  word-break: break-word; /* Handle long names */
+  flex-grow: 1; /* Allow the h2 element to grow */
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .team-info span {
-  font-size: 1.2em;
+  font-size: 1.5rem;
   font-weight: bold;
   color: #1d3557;
   margin: 0 10px;
+  text-align: center;
 }
 
 .live-stats {
